[metadata]
name = flux
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
summary = Artificial time library
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/getslash/flux
